# convenioquiroferreira

./: .env.example  .gitignore  ATUALIZACAO_PRECOS_CUPONS.md  Agenda Redesign - Standalone.html  CUPOM_INSTRUCOES.md  EXEMPLO_PAINEL_ADMIN_CUPONS.md  FETCH_WITH_AUTH_EXAMPLES.md  MERCADOPAGO_QUICK_REFERENCE.md  MERCADOPAGO_SANDBOX_SETUP.md  REFRESH_TOKEN_DOCUMENTATION.md  ROLE_PERSISTENCE_FIX.md  SCOPE_v1.md  SISTEMA_RASTREAMENTO_AFILIADOS.md  TOKEN_AUTO_REFRESH.md  VERIFICACAO_ASSINATURAS_EXPIRADAS.md  _tmp_check_consult.mjs  add_signature_column.sql  backup_banco.bat  docker-compose.yml  eslint.config.js  index.html  index_primeira_fase.js  package-lock.json  package.json  senha.js  vite.config.ts
.claude/: settings.local.json
document_service/: Dockerfile  pyproject.toml  requirements.txt
document_service/app/: __init__.py  config.py  context.py  main.py  render_engine.py  schemas.py
document_service/app/templates/: base.html.j2  certificate.html.j2  consent_form.html.j2  declaration.html.j2  exam_request.html.j2  lgpd.html.j2  medical_record.html.j2  other.html.j2  prescription.html.j2
document_service/tests/: test_context.py  test_health.py
memory/: MEMORY.md  document_whatsapp_sharing.md
prompt/: prompt_secretaria_virtual.md
public/: browserconfig.xml  manifest.json
scripts/: backup_db.mjs  generate_pdf.py  revoke_all_refresh_tokens.mjs  rollback_limpeza_2026-07-21.sql  verify_schema.mjs  wa_inspect.mjs  wa_regression.mjs  wa_sim.mjs
server/: db.js  index.js  whatsapp.js
server/config/: cloudinary.js  (+1 more)
src/: App.tsx  index.css  main.tsx
(+117 files in other folders)
