[project]
name = "document-service"
version = "1.0.0"
description = "PDF generation for medical documents and records"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "jinja2>=3.1",
  "weasyprint>=63",
  "pydantic>=2.10",
  "pydantic-settings>=2.6",
  "httpx>=0.28",
]

[project.optional-dependencies]
dev = ["pytest>=8.3"]

[tool.pytest.ini_options]
testpaths = ["tests"]
